# gov-food-contracts-explorer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  update-opportunities.yml
data/: contracts.db
src/dla_contracts/: cli.py  config.py  db.py  dla_scraper.py  export.py  models.py  pdf_extractor.py
web/: README.md  package-lock.json  package.json
web/scripts/: export-contracts.mjs  fetch-sam-opportunities.mjs
web/scripts/test/: fetch-sam-opportunities.test.mjs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DLAContracts.tsx  FederalSpending.tsx  OpenOpportunities.tsx
web/src/data/: contracts.json  opportunities.json
web/src/lib/: contracts.ts  opportunities.ts  opportunity-matching.ts  usaspending.ts
