[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dla-contracts"
version = "0.1.0"
description = "Structured dataset of DLA Troop Support Food Services contracts"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "playwright>=1.40",
    "pdfplumber>=0.11",
]

[project.scripts]
dla-contracts = "dla_contracts.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
